# LyriK

./: .gitignore  Core.py  DBusAdaptor.py  Observer.py  README.md  Timer.py  Unit.py  Worker.py  introspection.xml  main.py  pyproject.toml
lyrik/: __main__.py
lyrik/src/: __init__.py  adaptor.py  dbus_adaptor.py  interface_manager.py  lyrickrc.toml  main_application.py  mpris_watcher.py  netease_music_interface.py  netwrok_interface.py
